fix: fixed gap underneath table

--- a/components/atoms/Panel/panel.module.scss
+++ b/components/atoms/Panel/panel.module.scss
@@ -6,7 +6,7 @@
   width: 100%;
   border-radius: 20px;
   z-index: 98;
-  height: calc(100vh - 305px);
+  height: calc(100vh - 280px);
   overflow: scroll;
 }
 
